--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -6,5 +6,12 @@ Hello, {{name}}!
 <form action="/logout" method="post">
     <button type="submit">Logout</button>
 </form>
+<br>
+<br>
+<ol>
+{{#users}}
+<li>{{name}}</li>
+{{/users}}
+</ol>
 </body>
 </html>
